# image-data-encoder

./: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  PNG_Img.cpp  PNG_Img.h  main.cpp
